@startuml

package "Activity" {
class AddSongToPlaylistActivity {
- log : Logger
- playlistDao : PlaylistDao
- albumTrackDao : AlbumTrackDao
+ handleRequest(AddSongToPlaylistRequest, context) : AddSongToPlaylistResult
}

class CreatePlaylistActivity {
- log : Logger
- playlistDao : PlaylistDao
+ handleRequest(CreatePlaylistRequest, context) : CreatePlaylistResult
}

class GetPlaylistActivity {
- log : Logger
- playlistDao : PlaylistDao
+ handleRequest(GetPlaylistRequest, context) : GetPlaylistResult
}

class GetPlaylistSongsActivity {
- log : Logger
- playlistDao : PlaylistDao
+ handleRequest(GetPlaylistSongsRequest, context) : GetPlaylistSongsResult
}

class UpdatePlaylistActivity {
- log : Logger
- playlistDao : PlaylistDao
+ handleRequest(UpdatePlaylistRequest, context) : UpdatePlaylistResult
}
}

package "Dynamodb" {

class AlbumTrackDao {
- dynamoDbMapper : DynamoDBMapper
}

class PlaylistDao {
- dynamoDbMapper : DynamoDBMapper
+ getPlaylist(String) : Playlist
}

package "models" {
class AlbumTrack {
- @DynamoDBHashKey asin : String
- @DynamoDBRangeKey trackNumber : Integer
- albumName : String
- songTitle : String

}

class Playlist {
- @DynamoDBHashKey id : String
- name : String
- customerId : String
- songCount : Integer
- tags : Set<String>
- songList : List<AlbumTrack>
}
}

}


package "exceptions" {
class AlbumTrackNotFoundException {
- serialVersionUID
}

class InvalidAttributeChangeException {
- serialVersionUID
}

class InvalidAttributeException {
- serialVersionUID
}

class InvalidAttributeValueException {
- serialVersionUID
}

class PlaylistNotFoundException {
- serialVersionUID
}





}

class RequestHandler
class RuntimeException

AddSongToPlaylistActivity <|... RequestHandler
CreatePlaylistActivity <|... RequestHandler
GetPlaylistSongsActivity <|.. RequestHandler
UpdatePlaylistActivity <|.. RequestHandler
AddSongToPlaylistActivity <-- PlaylistDao
AddSongToPlaylistActivity <-- AlbumTrackDao
CreatePlaylistActivity <-- PlaylistDao
GetPlaylistActivity <-- PlaylistDao
GetPlaylistSongsActivity <-- PlaylistDao
UpdatePlaylistActivity <-- PlaylistDao


RuntimeException <|-- PlaylistNotFoundException
RuntimeException <|-- AlbumTrackNotFoundException


Playlist --> AlbumTrack

AddSongToPlaylistActivity *-- AlbumTrackDao
AddSongToPlaylistActivity *-- PlaylistDao

CreatePlaylistActivity *-- PlaylistDao

GetPlaylistActivity *-- PlaylistDao

GetPlaylistSongsActivity *-- PlaylistDao

UpdatePlaylistActivity *-- PlaylistDao

InvalidAttributeException <|-- InvalidAttributeValueException
InvalidAttributeException <|-- InvalidAttributeChangeException
'RuntimeException --|> InvalidAttributeChangeException
'RuntimeException --|> InvalidAttributeValueException
RuntimeException <|-- InvalidAttributeException






@enduml